# wrench

./: .gitignore  CMakeLists.txt  README.md  wrench-config.cmake.in
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  footer.html  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/api/: class_view_hierarchy.rst.txt  classwrench_1_1_intrusive_ptr.rst.txt  classwrench_1_1_intrusive_ptr_enabled.rst.txt  classwrench_1_1_logger.rst.txt  classwrench_1_1_profiler.rst.txt  classwrench_1_1_ref_tracker.rst.txt  classwrench_1_1_single_threaded_ref_tracker.rst.txt  classwrench_1_1_stack_arena.rst.txt  define_portability_8hpp_1ae02e931bc8b97521d27498845d72cd69.rst.txt  dir__Users_blueberry_Software_wrench_include_wrench.rst.txt  dir__Users_blueberry_Software_wrench_include_wrench_algorithm.rst.txt  dir__Users_blueberry_Software_wrench_include_wrench_perf.rst.txt  enum_logger_8hpp_1a87a989b11909bac49b9e84757bacd24e.rst.txt  file_include_wrench_log_logger.hpp.rst.txt  file_include_wrench_memory_aligned_heap_allocator.hpp.rst.txt  file_include_wrench_memory_arena.hpp.rst.txt  file_include_wrench_memory_linear_allocator.hpp.rst.txt  file_include_wrench_memory_memory_utils.hpp.rst.txt  file_include_wrench_memory_pool_allocator.hpp.rst.txt  file_include_wrench_multithreading_spinlock.hpp.rst.txt  file_include_wrench_utils_portability.hpp.rst.txt  file_view_hierarchy.rst.txt  function_intrusive__ptr_8hpp_1a1995d25db42fc934c9e4eca88b4b37f5.rst.txt  function_logger_8hpp_1a0248bf0586053b6c288f82fc4dafa10c.rst.txt  function_logger_8hpp_1a114c7d8ac0cc451de81cb627dbf1c427.rst.txt  function_memory__utils_8hpp_1a5895da501ef40348ce77c4dde12e3179.rst.txt  function_unrolled__for_8hpp_1a74bd981357a9ea458ef436b776529498.rst.txt  namespace_wrench.rst.txt  program_listing_file_include_wrench_algorithm_unrolled_for.hpp.rst.txt  program_listing_file_include_wrench_log_logger.hpp.rst.txt  program_listing_file_include_wrench_memory_allocator.hpp.rst.txt  program_listing_file_include_wrench_memory_arena.hpp.rst.txt  program_listing_file_include_wrench_memory_intrusive_ptr.hpp.rst.txt  program_listing_file_include_wrench_memory_memory_utils.hpp.rst.txt  program_listing_file_include_wrench_memory_pool_allocator.hpp.rst.txt  program_listing_file_include_wrench_utils_portability.hpp.rst.txt  structwrench_1_1_freelist_1_1_node.rst.txt  structwrench_1_1_heap_arena.rst.txt  structwrench_1_1_int64.rst.txt  structwrench_1_1_profiler_1_1_counters_1_1_counter.rst.txt  (+18 more)
docs/_templates/: layout.html
docs/api/: class_view_hierarchy.html  class_view_hierarchy.rst  classwrench_1_1_aligned_heap_allocator.html  classwrench_1_1_aligned_heap_allocator.rst  classwrench_1_1_allocator.html  classwrench_1_1_allocator.rst  classwrench_1_1_freelist.html  classwrench_1_1_freelist.rst  classwrench_1_1_intrusive_ptr.html  classwrench_1_1_intrusive_ptr_enabled.html  classwrench_1_1_linear_allocator.html  classwrench_1_1_linear_allocator.rst  classwrench_1_1_logger.html  classwrench_1_1_multi_threaded_ref_tracker.html  classwrench_1_1_multi_threaded_ref_tracker.rst  classwrench_1_1_pool_allocator.html  classwrench_1_1_pool_allocator.rst  classwrench_1_1_profiler.html  classwrench_1_1_profiler_1_1_counters.html  classwrench_1_1_profiler_1_1_counters.rst  classwrench_1_1_ref_tracker.html  classwrench_1_1_single_threaded_ref_tracker.html  classwrench_1_1_stack_arena.html  classwrench_1_1_thread_safe_freelist.html  classwrench_1_1_thread_safe_freelist.rst  define_portability_8hpp_1ae02e931bc8b97521d27498845d72cd69.html  dir__Users_blueberry_Software_wrench_include_wrench.html  dir__Users_blueberry_Software_wrench_include_wrench.rst  dir__Users_blueberry_Software_wrench_include_wrench_algorithm.html  dir__Users_blueberry_Software_wrench_include_wrench_algorithm_detail.html  dir__Users_blueberry_Software_wrench_include_wrench_algorithm_detail.rst  dir__Users_blueberry_Software_wrench_include_wrench_log.html  dir__Users_blueberry_Software_wrench_include_wrench_log.rst  dir__Users_blueberry_Software_wrench_include_wrench_memory.html  dir__Users_blueberry_Software_wrench_include_wrench_memory.rst  dir__Users_blueberry_Software_wrench_include_wrench_multithreading.html  dir__Users_blueberry_Software_wrench_include_wrench_multithreading.rst  dir__Users_blueberry_Software_wrench_include_wrench_perf.html  dir__Users_blueberry_Software_wrench_include_wrench_utils.html  dir__Users_blueberry_Software_wrench_include_wrench_utils.rst  (+114 more)
include/wrench/algorithm/: unrolled_for.hpp
include/wrench/algorithm/detail/: unrolled_for_impl_.hpp
include/wrench/log/: logger.hpp
include/wrench/memory/: aligned_heap_allocator.hpp  allocator.hpp  arena.hpp  intrusive_ptr.hpp  linear_allocator.hpp  memory_utils.hpp  pool_allocator.hpp  ref_tracker.hpp  unique_ptr.hpp
include/wrench/multithreading/: spinlock.hpp  void_lock.hpp
include/wrench/perf/: profiler.hpp
include/wrench/utils/: number.hpp  portability.hpp  type_traits.hpp
src/perf/: profiler.cpp
tests/: CMakeLists.txt  algorithm.cpp  all.cpp  memory.cpp  utils.cpp
tests/algorithm/: algorithm.hpp  unrolled_for.hpp  unrolled_for_tests.hpp
tests/memory/: intrusive_ptr.hpp  intrusive_ptr_tests.hpp  memory.hpp  unique_ptr.hpp
tests/utils/: type_traits.hpp
